[package]
name = "mvf-extract"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mvf-extract"
path = "extract.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
arrow = "59.0.0"
parquet = "59.0.0"
rayon = "1.12.0"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
zip = { version = "8.6.0", default-features = false, features = ["aes-crypto", "deflate"] }
